--- a/public/Kanbas/Courses/Grades/grades.html
+++ b/public/Kanbas/Courses/Grades/grades.html
@@ -30,7 +30,7 @@
             <td valign="top">
                 <h2>Course Navigation</h2>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="kanbas/home.html">Home</a></li>
                     <li><a href="#">Modules</a></li>
                     <li><a href="#">Piazza</a></li>
                     <li><a href="#">Zoom Meetings</a></li>
