--- a/public/Kanbas/Courses/Home/home.html
+++ b/public/Kanbas/Courses/Home/home.html
@@ -5,7 +5,7 @@
 
 <body>
     <!-- <div id="root"></div> -->
-
+    
     <table border="0" width="100%">
         <!-- Row to define the four columns -->
         <tr>
@@ -13,9 +13,9 @@
             <td valign="top">
                 <h2>Kanbas Navigation</h2>
                 <ul>
-                    <li><a href="#">Account</a></li>
-                    <li><a href="#">Dashboard</a></li>
-                    <li><a href="#">Courses</a></li>
+                    <li><a href="/Kanbas/Account/Profile/screen.html">Account</a></li>
+                    <li><a href="/Kanbas/Dashboard/screen.html">Dashboard</a></li>
+                    <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
                     <li><a href="#">Calendar</a></li>
                     <li><a href="#">Inbox</a></li>
                     <li><a href="#">History</a></li>
@@ -29,7 +29,7 @@
             <td valign="top">
                 <h2>Course Navigation</h2>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="kanbas/home.html">Home</a></li>
                     <li><a href="#">Modules</a></li>
                     <li><a href="#">Piazza</a></li>
                     <li><a href="#">Zoom Meetings</a></li>
@@ -136,5 +136,7 @@
             </td>
         </tr>
     </table>
+    <noscript>You need to enable JAVASCRIPT to run this app</noscript>
+    <div id="root"></div>
 </body>
 </html>
