--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,14 @@
 
     <ul>
     <li><a href="/labs/a1/index.html">Lab 1 </a> </li><br/>
-    <li><a href="/Kanbas/Courses/Home/screen.html">Assignment 1 </a> </li><br/>
+    <li><a href="/Kanbas/Courses/Home/screen.html">Assignment 1 </a> </li><br/></br>
+
+    <li><a href="/labs/a2/index.html">Lab 2 </a> </li><br/>
+
+    
+
+
+
     </ul>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
