--- a/public/Kanbas/Dashboard/screen.html
+++ b/public/Kanbas/Dashboard/screen.html
@@ -12,25 +12,69 @@
 <div class="container">
 <div class="row no-gutters"> 
     <!-- Kanbas Navigation -->
-        <div class="kanbas-sidebar p-3">
-            <h2><img src="logo.png" width="80"></h2>
-            <ul class="nav flex-column">
+        <div class="kanbas-sidebar">
+            <h2><img src="logo.png" width="80" alt="Logo"></h2>
+            <ul class="nav flex-column ">
                 <li class="nav-item">
                     <a class="nav-link" href="/Kanbas/Account/Profile/screen.html">
-                        <i class="fas fa-user-circle"></i> Account
+                        <i class="fas fa-user-circle"></i>
+                        <span>Account</span>
                     </a>
                 </li>
 
                 <li class="nav-item">
                     <a class="nav-link active" href="/Kanbas/Dashboard/screen.html">
-                        <i class="fas fa-tachometer-alt"></i> Dashboard
+                        <i class="fas fa-tachometer-alt"></i> 
+                        <span>Dashboard</span>
                     </a>
                 </li>
 
-
                 <li class="nav-item">
                     <a class="nav-link" href="/Kanbas/Courses/Home/screen.html">
-                        <i class="fas fa-book-open"></i> Courses
+                        <i class="fas fa-book-open"></i> 
+                        <span>Courses</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/Kanbas/Calendar/screen.html">
+                        <i class="fas fa-calendar-alt"></i> 
+                        <span>Calendar</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/Kanbas/Inbox/screen.html">
+                        <i class="fas fa-envelope"></i> 
+                        <span>Inbox</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/Kanbas/History/screen.html">
+                        <i class="fas fa-history"></i> 
+                        <span>History</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/Kanbas/Studio/screen.html">
+                        <i class="fas fa-paint-brush"></i> 
+                        <span>Studio</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/Kanbas/Commons/screen.html">
+                        <i class="fas fa-users"></i> 
+                        <span>Commons</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/Kanbas/Help/screen.html">
+                        <i class="fas fa-question-circle"></i> 
+                        <span>Help</span>
                     </a>
                 </li>
             </ul>
